Cleanup code of warnings